fix: sectio overlap

--- a/style.css
+++ b/style.css
@@ -248,7 +248,7 @@ box-shadow: 10px 10px 40px 0px rgba(73,123,148,1);
     font-size: 3rem;
     text-align: center;
     padding-top:2px;
-    padding-bottom:5px ;
+    padding-bottom:2px ;
   }
   
   #socials-container {
